now with contact mail

--- a/index.html
+++ b/index.html
@@ -2,17 +2,23 @@
 <html lang="de">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Datenschutzerklärung – Mein Tagebuch</title>
+<style>
+  body { font-family: Arial, sans-serif; line-height: 1.6; margin: 20px; }
+  h1, h2 { color: #333; }
+  ul { margin-left: 20px; }
+</style>
 </head>
 <body>
 <h1>Datenschutzerklärung – Mein Tagebuch</h1>
 
-<h2>Verantwortlicher</h2>
+<h2>1. Verantwortlicher</h2>
 <p>Verantwortlich für die Datenverarbeitung in dieser App ist:<br>
-Felix Mustermann<br>
-E-Mail: deine-email@example.com</p>
+Felix Manemann<br>
+E-Mail: <a href="mailto:contact.oneminutediary@gmail.com">contact.oneminutediary@gmail.com</a></p>
 
-<h2>Welche Daten werden verarbeitet?</h2>
+<h2>2. Welche Daten werden verarbeitet?</h2>
 <p>Die App speichert ausschließlich Inhalte, die du selbst erstellst, lokal auf deinem Gerät. Dazu gehören:</p>
 <ul>
   <li>Tagebucheinträge und Notizen</li>
@@ -20,27 +26,32 @@ E-Mail: deine-email@example.com</p>
 </ul>
 <p>Es werden keine Daten automatisch auf Server oder in die Cloud übertragen.</p>
 
-<h2>Zweck der Datenverarbeitung</h2>
+<h2>3. Zweck der Datenverarbeitung</h2>
 <p>Die Daten werden ausschließlich genutzt, um die App-Funktionen bereitzustellen, z. B.:</p>
 <ul>
   <li>Speichern und Anzeigen deiner Tagebuchinhalte</li>
   <li>Export und Backup deiner Einträge</li>
 </ul>
 
-<h2>Weitergabe an Dritte</h2>
-<p>Wir geben keine personenbezogenen Daten an Dritte weiter. Deine Inhalte bleiben auf deinem Gerät.</p>
+<h2>4. Weitergabe an Dritte</h2>
+<p>Es erfolgt keine Weitergabe personenbezogener Daten an Dritte. Deine Inhalte bleiben auf deinem Gerät.</p>
 
-<h2>Rechte der Nutzer</h2>
-<p>Du hast das Recht, Auskunft über deine gespeicherten Daten zu erhalten und diese zu löschen. Da alle Inhalte lokal gespeichert werden, kannst du die App jederzeit löschen, um alle Daten zu entfernen. Sorge selbst für Backups, wenn du Inhalte behalten möchtest.</p>
+<h2>5. Rechte der Nutzer</h2>
+<p>Du hast folgende Rechte:</p>
+<ul>
+  <li>Auskunft über die gespeicherten Daten</li>
+  <li>Löschung der Daten (indem du die App löschst oder Backups entfernst)</li>
+</ul>
+<p>Da alle Inhalte lokal gespeichert werden, liegt die Verantwortung für Backups bei dir.</p>
 
-<h2>Sicherheit</h2>
-<p>Die Sicherheit deiner Daten hängt von deinem Gerät ab. Wir empfehlen regelmäßige Backups. Trotz aller Maßnahmen können wir keine vollständige Datensicherheit garantieren.</p>
+<h2>6. Datensicherheit</h2>
+<p>Die Sicherheit deiner Daten hängt von deinem Gerät ab. Wir empfehlen regelmäßige Backups. Trotz aller Maßnahmen kann keine vollständige Datensicherheit garantiert werden.</p>
 
-<h2>Änderungen an der App und der Datenschutzerklärung</h2>
+<h2>7. Änderungen an der App und der Datenschutzerklärung</h2>
 <p>Funktionen der App können jederzeit angepasst oder entfernt werden. Änderungen an der Datenschutzerklärung werden auf dieser Seite veröffentlicht.</p>
 
-<h2>Kontakt</h2>
-<p>Bei Fragen oder rechtlichen Anliegen schreibe bitte an: deine-email@example.com</p>
+<h2>8. Kontakt</h2>
+<p>Bei Fragen oder rechtlichen Anliegen kannst du uns unter <a href="mailto:contact.oneminutediary@gmail.com">contact.oneminutediary@gmail.com</a> kontaktieren.</p>
 
 </body>
 </html>
